# MIPS-Project

./: CMakeLists.txt  Notes.txt
examples/: example1.asm  example2.asm  example3.asm  example4.asm  example5.asm
include/: assembler.h  executor.h  instruction.h  interpreter.h  machine_state.h  parser.h
src/assembler/: assembler.cpp
src/core/: instruction.cpp  machine_state.cpp
src/executor/: executor.cpp
src/interpreter/: interpreter.cpp
src/main/: main_assembler.cpp  main_executor.cpp  main_interpreter.cpp
src/parser/: parser.cpp
tests/: test_instruction.cpp  test_machine_state.cpp  test_parser.cpp
